--- a/intro.html
+++ b/intro.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="js/bootstrap.js"></script>
+
+
+</head>
+<body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
     <link rel="stylesheet" href="css/bootstrap.css">
 
 </head>
@@ -17,10 +27,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">按我會發財</a>
+                    <a class="nav-link " aria-current="page" href="index.html">按我會發財</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="intro.html">介紹</a>
+                    <a class="nav-link active" href="#">介紹</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -47,6 +57,6 @@
         </div>
     </div>
 </nav>
-<script src="js/bootstrap.bundle.js"></script>
+<link rel="stylesheet" href="css/bootstrap.css">
 </body>
 </html>
